2007-06-29  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/field.py (PresentedRow.permitted)
	(PresentedRow.codebook, PresentedRow.key): New methods.
	(PresentedRow._set_row): Always use `FieldSpec' data type.

	* pytis/form/inputfield.py: Avoid using `PresentedRow.data()' method.

	* pytis/form/dualform.py: Avoid using `PresentedRow.data()' method.

	* pytis/form/form.py: Added a hack to pass an independent, but
	initialized data object to application defined procedures.

2007-06-28  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/commands_.py: New command `ListForm.COMMAND_COPY_AGGREGATION_RESULT'.

	* pytis/form/screen.py: Clipboard copying fixed.

	* pytis/form/list.py: Turn on aggregation functions defined in
	specification.  Handle aggregation result copying and add the
	command to the context menu.  

	* pytis/presentation/spec.py: Added support for turning on
	aggregation functions in specification.

	* pytis/presentation/field.py: Handle closed transactions in
	codebook display computation.

2007-06-28  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py (PostgreSQLConnector._pg_query): Raise
	DBUserException when trying to use closed transaction.

2007-06-28  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py (DBPostgreSQLTransaction.open): New
	method.

2007-06-28  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/form.py: Define the callback `CALL_USER_INTERACTION'
	in the base class.  Call it on popup menu display.

	* pytis/form/list.py: Callback `CALL_USER_INTERACTION' moved to
	the parent class.

	* pytis/form/inputfield.py (InputField._on_idle): Previous hack removed.

	* pytis/form/dialog.py (ExitDialog): Allow setting the checkbox
	initial state.

	* pytis/form/application.py: Remember the state of exit dialog checkbox.

	* pytis/data/postgresql.py
	(PostgreSQLStandardBindingHandler._pdbb_get_table_type): Added a
	quick hack to ignore multicolumn unique constraints.

2007-06-27  Tomas Cerha  <cerha@brailcom.org>
